--- a/package.json
+++ b/package.json
@@ -260,6 +260,7 @@
     "electron-debug": "^2.0.0",
     "electron-log": "^2.2.17",
     "electron-updater": "^3.2.3",
+    "fs": "^0.0.1-security",
     "history": "^4.7.2",
     "instascan": "^1.0.0",
     "react": "^16.6.3",
